Make access to gfxWindowsPlatform D3D11 devices thread-safe. (bug 1258174, r=bas)